--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
   - name: taskapp
-    databaseName: mysite
-    user: mysite
+    databaseName: task
+    user: taskapp
     plan: free
 
 services:
   - type: web
-    name: mysite
+    name: taskapp
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: task
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
