--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
