--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+cat_one:
+  id: 1
+  name: "category for user 1"
+  user_id: 1
 
-two:
-  name: MyString
+cat_two:
+  id: 2
+  name: "category for user 2"
+  user_id: 2
