--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,11 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+user_one: 
+  id: 1
+  email: "test1@test.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, '123456') %>
+user_two:
+  id: 2
+  email: "test2@test.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, '123456') %>
